# ffs

./: Cargo.toml
.github/: copilot-instructions.md
examples/: debouncer_full.rs  debouncer_mini.rs  monitor_debounced.rs  poll_sysfs.rs
src/: lib.rs  main.rs
tests/: benchmarks.rs  integration_tests.rs
