[package]
name = "ffs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
ignore = "0.4.23"
notify = "8.1.0"
tempfile = "3.20.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.0"
futures = "0.3.0"
rayon = "1.8.0"
num_cpus = "1.16.0"
colored = "2.1.0"
notify-debouncer-full = "0.5.0"
notify-debouncer-mini = "0.6.0"
